--- a/css/custom.css
+++ b/css/custom.css
@@ -1156,8 +1156,19 @@ tr:hover {
 
 .acc-history-container{
     border-radius: 10px;
+    background-color: #feffff;
     box-shadow: 0 1px 2px rgb(0,0,0,0.5);
 }
+
+.settings-title {
+    color: #000;
+}
+
+.tthead1 {
+    color: #fff;
+    background-color: #001C30;
+}
+
 
 .profile-container{
     margin: 2%;
